# stt-demo

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  pr.yml
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  logger.py  socketio.py  webrtc.py  webrtc_rust.rs
app/models/: __init__.py  chatroom.py  message.py  user.py
app/services/: __init__.py  auth.py  chatroom.py  message.py  rust_service.rs
app/templates/: base.html
myapplication/: main.py  signals.py  socketioServer.py  stt.py
src/: main.py
tests/: test_sttdemo.py
