[tool.poetry]
name = "stt-demo"
version = "0.1.0"
description = "STT demo"
authors = ["Vikash Agrawal <vikashagrawal1990@gmail.com>"]
packages = [
    { include = "*", from = "myapplication" }
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smarlhens/stt-demo#readme"
repository = "https://github.com/smarlhens/stt-demo"

[tool.poetry.scripts]
application = "myapplication.main:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
loguru = "^0.7.2"
realtimestt = "^0.1.16"
python-socketio = "^5.11.2"
realtimetts = "^0.4.1"
ollama = "^0.2.1"
langchain = "^0.2.5"

[tool.poetry.dev-dependencies]
bandit = "1.7.8"
docformatter = "1.7.5"
mypy = "1.10.0"
pre-commit = "^3.7.1"
pytest = "8.2.1"
pytest-cov = "5.0.0"
ruff = "0.4.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
backend-path = ["myapplication"]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
    "__pycache__",
    "build",
    "dist",
]
target-version = "py312"
line-length = 90
src = ["myapplication", "tests"]

[tool.ruff.lint]
extend-select = [
    "C4",
    "D200",
    "D201",
    "D204",
    "D205",
    "D206",
    "D210",
    "D211",
    "D213",
    "D300",
    "D400",
    "D402",
    "D403",
    "D404",
    "D419",
    "E",
    "F",
    "G010",
    "I001",
    "INP001",
    "N805",
    "PERF101",
    "PERF102",
    "PERF401",
    "PERF402",
    "PGH004",
    "PGH005",
    "PIE794",
    "PIE796",
    "PIE807",
    "PIE810",
    "RET502",
    "RET503",
    "RET504",
    "RET505",
    "RUF015",
    "RUF100",
    "S101",
    "T20",
    "W",
]
